--- a/views/tipLib.jade
+++ b/views/tipLib.jade
@@ -197,6 +197,7 @@ append body
 							input.form-control(type="text" id ="tipTitleInput" placeholder="*Title" style="margin-bottom:10px;" ng-model="tipTitleAdd")
 							#descriptionWrapper(style="font-size:large")
 								//span Description 1
+								//textarea#newTipDesc.form-control.tipDescInput(placeholder="*Tip Description" ng-model="firstTipDesc")
 								textarea#textAreaTip.form-control.tipDescInput(placeholder="*Tip Description" required ng-model="tipDescAdd")
 							#descriptionButtonWrapper(style="display:inline-block; margin-bottom:5px;")
 
