--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -177,6 +177,10 @@ a {
 #signInLinkWrapper{
     font-size: smaller;
     margin-top: 15px;
+    text-align: center;
+    width: 100%;
+    padding: 0px;
+    margin: 0px;
 }
 
 #navBarSortBtn{
