--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 append body
-	.container(ng-controller="bodyMelodyHelperController" style="margin:0 auto;width:90%;max-width:966px;margin-top:50px;height: 1000px;")
+	.container(ng-controller="bodyMelodyHelperController" style="margin:0 auto;width:90%;max-width:966px;margin-top:50px;height: 100%;")
 		.titleBannerDiv(style="text-align:center")
 			h1
 				#titleName= title
