--- a/views/sampleLib.jade
+++ b/views/sampleLib.jade
@@ -7,7 +7,7 @@ append body
 				span.greeting Hey there	
 				a(href='/profile/{{username}}'){{username}}!
 		
-		div.row(style='margin-top:50px')
+		div.row
 
 			div.packListWrapper.col-sm-3.col-md-3.col-lg-3.col-xs-3
 				
